# clickgraph

./: .dockerignore  .gitignore  ARCHITECTURE_VARIABLE_RESOLUTION.md  AUTO_DISCOVERY_STATUS.md  BENCHMARKS.md  CHAINED_JOIN_OPTIMIZATION.md  CHANGELOG.md  CLAUDE.md  CLEANUP_COMPLETE.md  CLEANUP_COMPLETE_SUMMARY.md  CODE_OF_CONDUCT.md  CODE_SMELL_REFACTORING_VISUAL_SUMMARY.md  COMMIT_MESSAGE_V0.6.1.md  CONTRIBUTING.md  CTE_MANAGER_DESIGN.md  Cargo.toml  DENORMALIZED_EDGE_FINDINGS.md  DENORMALIZED_EDGE_IMPLEMENTATION_GAP.md  DENORMALIZED_EDGE_SESSION_2_PROGRESS.md  DESIGN_REVIEW_WITH_CTE_FIX.md  DEVELOPMENT_PROCESS.md  DEV_QUICK_START.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile  Dockerfile.test  EXPRESSION_PARSING_IMPLEMENTATION.md  FOF_DUPLICATE_NEO4J_COMPARISON.md  GITHUB_RELEASE_TEXT.md  GROUP_BY_FIX.md  HARDCODED_FALLBACK_AUDIT.md  HIGH_IMPACT_FEATURES_ANALYSIS.md  IMPLEMENTATION_PLAN_VARIABLE_SOURCE.md  INTEGRATION_TEST_ANALYSIS.md  INTEGRATION_TEST_AUDIT.md  INTEGRATION_TEST_DOCUMENTATION_INDEX.md  INTEGRATION_TEST_FIX.md  INTEGRATION_TEST_IMPROVEMENT_ROADMAP.md  INTEGRATION_TEST_INFRA_FIXES.md  INTEGRATION_TEST_METRICS_SUMMARY.md  (+237 more)
.cargo/: config.toml
brahmand/: Cargo.toml
brahmand-client/: Cargo.toml
brahmand-client/src/: main.rs
brahmand/src/: config.rs  lib.rs  main.rs
brahmand/src/clickhouse_query_generator/: common.rs  ddl_query.rs  errors.rs  function_translator.rs  mod.rs  pagerank.rs  to_sql.rs  to_sql_query.rs  variable_length_cte.rs  view_query.rs  view_scan.rs  where_clause_tests.rs
brahmand/src/graph_catalog/: column_info.rs  config.rs  errors.rs  graph_schema.rs  mod.rs  schema_validator.rs
brahmand/src/graph_catalog/schema_validator/: tests.rs
brahmand/src/graph_catalog/testing/: mock_clickhouse.rs  mod.rs
brahmand/src/graph_catalog/tests/: README.md  config_tests.rs  mock_clickhouse.rs  mock_clickhouse_enhanced.rs  schema_validator_tests.rs  view_demo.rs  view_validation_tests.rs
brahmand/src/open_cypher_parser/: ast.rs  call_clause.rs  create_clause.rs  create_node_table_clause.rs  create_rel_table_clause.rs  create_table_schema.rs  delete_clause.rs  expression.rs  limit_clause.rs  match_clause.rs  mod.rs  optional_match_clause.rs  order_by_clause.rs  path_pattern.rs  remove_clause.rs  return_clause.rs  set_clause.rs  skip_clause.rs  where_clause.rs  with_clause.rs
brahmand/src/packstream/: de.rs
brahmand/src/query_engine/: errors.rs  mod.rs  types.rs
brahmand/src/query_engine/ch_query_generator/: ddl_query.rs  errors.rs  graph_traversal.rs  mod.rs  order_by_statement.rs  read_query.rs  select_statement.rs  where_statement.rs
brahmand/src/query_engine/optimizer/: anchor_node.rs  errors.rs  mod.rs  physical_plan.rs  schema_inference.rs  traversal_sequence.rs
brahmand/src/query_engine/planner/: errors.rs  eval_match_clause.rs  eval_order_by_clause.rs  eval_return_clause.rs  eval_skip_n_limit_clause.rs  eval_where_clause.rs  logical_plan.rs  mod.rs
brahmand/src/query_planner/: errors.rs  mod.rs  types.rs
brahmand/src/query_planner/analyzer/: analyzer_pass.rs  duplicate_scans_removing.rs  errors.rs  filter_tagging.rs  graph_context.rs  graph_join_inference.rs  graph_traversal_planning.rs  group_by_building.rs  mod.rs  plan_sanitization.rs  projection_tagging.rs  query_validation.rs  schema_inference.rs  view_resolver.rs  view_resolver_tests.rs  view_scan_handling.rs
brahmand/src/query_planner/logical_expr/: logical_expr.rs  mod.rs
brahmand/src/query_planner/logical_plan/: errors.rs  filter_view.rs  logical_plan.rs  match_clause.rs  mod.rs  optional_match_clause.rs  order_by_clause.rs  plan_builder.rs  projection_view.rs  return_clause.rs  skip_n_limit_clause.rs  view_planning.rs  view_scan.rs  where_clause.rs  with_clause.rs
brahmand/src/query_planner/optimizer/: anchor_node_selection.rs  errors.rs  filter_into_graph_rel.rs  filter_push_down.rs  mod.rs  optimizer_pass.rs  projection_push_down.rs  view_optimizer.rs
brahmand/src/render_plan/: cte_extraction.rs  cte_generation.rs  errors.rs  expression_utils.rs  filter_pipeline.rs  from_table.rs  mod.rs  plan_builder.rs  render_expr.rs  render_plan.rs  view_plan.rs  view_table_ref.rs
brahmand/src/server/: clickhouse_client.rs  graph_catalog.rs  graph_meta.rs  handlers.rs  mod.rs  models.rs
brahmand/src/testing/: clickhouse.rs  mod.rs
brahmand/src/utils/: mod.rs  serde_arc.rs  serde_arc_vec.rs
brahmand/tests/: path_variable_tests.rs
brahmand/tests/fixtures/: mod.rs
brahmand/tests/integration/: mod.rs  parameter_function_test.rs  path_variable_tests.rs
clickgraph-embedded/: AGENTS.md  Cargo.toml
clickgraph-embedded/src/: connection.rs  cypher_loader.rs  database.rs  error.rs  export.rs  graph_result.rs  lib.rs  query_result.rs  result_display.rs  value.rs  write_helpers.rs
clickgraph-embedded/tests/: chdb_e2e.rs  databricks_e2e.rs  hybrid_e2e.rs  integration.rs  writes_e2e.rs
clickgraph-ffi/: AGENTS.md  Cargo.toml
clickgraph-ffi/src/: lib.rs
clickgraph-py/: .gitignore  AGENTS.md  Cargo.toml  README.md  pyproject.toml
clickgraph-py-uniffi/: .gitignore  AGENTS.md  README.md  pyproject.toml
clickgraph-py-uniffi/clickgraph/: __init__.py  _ffi.py
clickgraph-py-uniffi/tests/: test_chdb_e2e.py
clickgraph-py/clickgraph/: __init__.py  _ffi.py
clickgraph-py/python/clickgraph/: __init__.py
clickgraph-py/src/: lib.rs
clickgraph-py/tests/: test_bindings.py
clickgraph-tck/: Cargo.toml  README.md
clickgraph-tck/tests/: create_parser.rs  result_fmt.rs  schema_gen.rs  tck.rs
clickgraph-tck/tests/features/: FEATURES_VERSION
clickgraph-tool/: AGENTS.md  Cargo.toml
clickgraph-tool/src/: config.rs  llm.rs  main.rs  schema_fmt.rs
clickgraph-tool/src/commands/: mod.rs  nl.rs  query.rs  schema.rs
clickgraph-tool/tests/: databricks_query.rs  dialect_flag.rs
tools/cg-schema/: .gitignore  README.md  pyproject.toml  setup.py
tools/cg-schema/cg_schema/: __init__.py  analyzer.py  cli.py  gliner.py  output.py
tools/cg-schema/cg_schema.egg-info/: PKG-INFO
tools/cg-schema/tests/: test_analyzer.py  test_cli_integration.py
(+4382 files in other folders)
