[workspace]
members = [
    "brahmand-client",
]

[package]
name = "clickgraph"
version = "0.6.1"
edition = "2021"
rust-version = "1.85"

[dependencies]
nom = "8.0.0"
uuid = {version = "1.16.0", features = ["v4"]}
tokio = { version = "1", features = ["full"]}
tokio-tungstenite = "0.21"
futures-util = "0.3"
clickhouse = "0.13.2"
serde ={ version = "1", features = ["derive"]}
serde_json = { version = "1.0.140", features = ["preserve_order"] }
bumpalo = "3.14"  # Arena allocator for AST string allocation
serde_yaml = "0.9"
axum = "0.8.6"
dotenvy = "0.15.7"
thiserror = "2.0.12"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
# Bolt protocol dependencies
sha2 = "0.10"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
bytes = { version = "1.8", features = ["serde"] }  # For PackStream (vendored from neo4rs)
validator = { version = "0.20", features = ["derive"] }
# Query cache dependencies
hex = "0.4"
lru = "0.12"
# Function registry
lazy_static = "1.5"
# NOTE: regex is used in handler.rs for Cypher→SQL ID pattern rewriting
# (e.g., `id(alias) IN $param`). We accept the ~500KB binary size cost
# in exchange for clearer, less error-prone parsing vs custom string matching.
regex = "1.12.3"

[dev-dependencies]
clickhouse = { version = "0.13.2", features = ["test-util"] }
mockall = "0.12"
tokio-test = "0.4"
tempfile = "3.8"
async-trait = "0.1"
anyhow = "1.0"
test-case = "3.3"  # For PackStream tests
serial_test = "3.2"  # For serializing tests that modify global state

[[test]]
name = "unit"
path = "tests/rust/unit/mod.rs"

[[test]]
name = "integration"
path = "tests/rust/integration/mod.rs"

[[test]]
name = "e2e"
path = "tests/rust/e2e/mod.rs"
