[workspace]
members = [
    "clickgraph-client",
    "clickgraph-embedded",
    "clickgraph-ffi",
    "clickgraph-tck",
    "clickgraph-tool",
]

[package]
name = "clickgraph"
version = "0.6.7-dev"
edition = "2021"
rust-version = "1.85"

[dependencies]
nom = "8.0.0"
uuid = {version = "1.16.0", features = ["v4"]}
tokio = { version = "1", features = ["full"]}
tokio-tungstenite = "0.21"
futures-util = "0.3"
clickhouse = "0.13.2"
serde ={ version = "1", features = ["derive"]}
serde_json = { version = "1.0.140", features = ["preserve_order"] }
bumpalo = "3.14"  # Arena allocator for AST string allocation
serde_yaml = "0.9"
axum = "0.8.6"
tower = "0.5"
tower-http = { version = "0.6", features = ["timeout", "limit", "catch-panic"] }
dotenvy = "0.15.7"
thiserror = "2.0.12"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
# Bolt protocol dependencies
sha2 = "0.10"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
bytes = { version = "1.8", features = ["serde"] }  # For PackStream (vendored from neo4rs)
validator = { version = "0.20", features = ["derive"] }
# Query cache dependencies
hex = "0.4"
# Function registry
lazy_static = "1.5"
# NOTE: regex is used in handler.rs for Cypher→SQL ID pattern rewriting
# (e.g., `id(alias) IN $param`). We accept the ~500KB binary size cost
# in exchange for clearer, less error-prone parsing vs custom string matching.
regex = "1.12.3"
async-trait = "0.1"
# chdb: embedded ClickHouse (optional — only compiled when feature "embedded" is enabled)
chdb-rust = { version = "1.3.1", optional = true }
# reqwest: HTTP client for the Databricks SQL Warehouse Statement Execution API.
# Compiled only when the `databricks` feature is enabled. `rustls-tls` chosen
# over native-tls to avoid OpenSSL version coupling on Linux distros and to
# match what the underlying clickhouse crate already pulls in via reqwest.
# Non-optional: used by the Databricks executor (databricks feature) AND the
# remote executor's metrics summary path (reads X-ClickHouse-Summary, gated at
# runtime by CLICKGRAPH_METRICS_CH_SUMMARY).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }

# `clickgraph` (the default ClickHouse-backed server) is auto-discovered
# from src/main.rs. `deltagraph` (Databricks-backed) is declared explicitly
# below because it needs `required-features` to gate it on the optional
# `databricks` Cargo feature — without that, `cargo build --release` on a
# default checkout would fail to compile the Databricks-only HTTP client.
[[bin]]
name = "deltagraph"
path = "src/bin/deltagraph.rs"
required-features = ["databricks"]

[features]
default = ["jemalloc"]
jemalloc = ["tikv-jemallocator"]
embedded = ["chdb-rust"]
# DeltaGraph Phase 2: Databricks SQL Warehouse executor.
# Off by default — only enable when building DeltaGraph distribution.
# (reqwest is now a non-optional dependency, so this feature is a marker for
# the Databricks-only code paths gated via #[cfg(feature = "databricks")].)
databricks = []

[dev-dependencies]
clickhouse = { version = "0.13.2", features = ["test-util"] }
mockall = "0.12"
tokio-test = "0.4"
tempfile = "3.8"
async-trait = "0.1"
anyhow = "1.0"
test-case = "3.3"  # For PackStream tests
serial_test = "3.2"  # For serializing tests that modify global state
tower = { version = "0.5", features = ["util"] }  # ServiceExt::oneshot for router tests
# Mock HTTP server for the Databricks executor's integration tests.
# Unconditional dev-dep so `cargo test` always knows where to find it;
# the tests themselves are gated on `#[cfg(feature = "databricks")]`,
# so non-databricks builds don't pay the runtime cost.
wiremock = "0.6"
# Used by the `deltagraph` binary's smoke test (Phase 4.1) to spawn the
# compiled bin under `cargo` and assert --help output / startup behavior.
assert_cmd = "2"
predicates = "3"

[[test]]
name = "unit"
path = "tests/rust/unit/mod.rs"

[[test]]
name = "integration"
path = "tests/rust/integration/mod.rs"

[[test]]
name = "e2e"
path = "tests/rust/e2e/mod.rs"

# Standalone smoke test for the `deltagraph` binary (Phase 4.1). Spawns
# the already-built bin via `assert_cmd::Command::cargo_bin` (which
# resolves the `CARGO_BIN_EXE_deltagraph` env var cargo sets for tests)
# rather than driving library code. Declared as a top-level [[test]] so
# it shows up under `cargo test --features databricks` instead of
# disappearing inside the unit/integration/e2e roots in tests/rust/.
[[test]]
name = "deltagraph_bin"
path = "tests/rust/bin/deltagraph_smoke.rs"
required-features = ["databricks"]

# Bolt-level boot regression for `deltagraph` (Phase 4.3). Spawns the
# subprocess against wiremock and completes the Bolt v5 handshake to
# prove the server boots end-to-end in Databricks mode without
# tripping any ClickHouse-specific init.
[[test]]
name = "deltagraph_bolt_e2e"
path = "tests/rust/bin/deltagraph_bolt_e2e.rs"
required-features = ["databricks"]
