[package]
name = "clickgraph-client"
version = "0.5.0"
edition = "2021"
rust-version = "1.70"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustyline = "15.0.0"
