[package]
name = "brahmand"
version = "0.0.1"
edition = "2024"
rust-version = "1.85"


[dependencies]
nom = "8.0.0"
uuid = {version = "1.16.0", features = ["v4"]}
tokio = { version = "1", features = ["full"]}
clickhouse = "0.13.2"
serde ={ version = "1", features = ["derive"]}
serde_json = "1.0.140"
axum = "0.8.3"
dotenv = { version = "0.15.0" }
thiserror = "2.0.12"

[dev-dependencies]
clickhouse = { version = "0.13.2", features = ["test-util"] }
