[package]
name = "brahmand"
version = "0.0.1"
edition = "2024"
rust-version = "1.85"


[dependencies]
nom = "8.0.0"
uuid = {version = "1.16.0", features = ["v4"]}
tokio = { version = "1", features = ["full"]}
clickhouse = "0.13.2"
serde ={ version = "1", features = ["derive"]}
serde_json = "1.0.140"
serde_yaml = "0.9"
axum = "0.8.6"
dotenv = { version = "0.15.0" }
thiserror = "2.0.12"
clap = { version = "4.5", features = ["derive"] }
# Bolt protocol dependencies
sha2 = "0.10"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"

[dev-dependencies]
clickhouse = { version = "0.13.2", features = ["test-util"] }
mockall = "0.12"
tokio-test = "0.4"
tempfile = "3.8"
async-trait = "0.1"
anyhow = "1.0"
