[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "clickgraph"
version = "0.1.0"
description = "Embedded graph query engine — run Cypher over Parquet, Iceberg, S3 and ClickHouse"
requires-python = ">=3.8"
license = "Apache-2.0"
readme = "README.md"
keywords = ["graph", "cypher", "clickhouse", "embedded", "analytics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Database",
]

[tool.maturin]
features = []
python-source = "python"
module-name = "clickgraph._clickgraph"
