[package]
name = "clickgraph-tool"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "ClickGraph CLI tool (cg) for agents and developers"

[[bin]]
name = "cg"
path = "src/main.rs"

[dependencies]
# Core engine — for SchemaDiscovery, llm_prompt, GraphSchemaConfig (schema subcommands)
clickgraph = { path = "..", default-features = false }
# Embedded crate — sql_only + remote execution (no chdb needed here)
clickgraph-embedded = { path = "../clickgraph-embedded" }
# clickhouse client is needed by SchemaDiscovery::introspect()
clickhouse = "0.13.2"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
anyhow = "1.0"
toml = "0.8"
dirs = "5"
